--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+
+
+    <button onclick="diaSemana('Lunes')">Lunes</button>
+    <button onclick="diaSemana('Martes')">Martes</button>
+    <button onclick="diaSemana('Miercoles')">Miercoles</button>
+    <button onclick="diaSemana('Jueves')">Jueves</button>
+    <button onclick="diaSemana('Viernes')">Viernes</button>
+    <button onclick="diaSemana('Sabado')">Sabado</button>
+    <button onclick="diaSemana('Domingo')">Domingo</button>
+    <button onclick="diaSemana('Agosto')">Agosto</button>
     
 </body>
 <script src="./assets/js/scripts.js"></script>
