--- a/index.html
+++ b/index.html
@@ -1,22 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
 
+    <header>
+        <h1>Calculadora</h1>
+        <h2>Por Andres Lugo...</h2>
 
-    <button onclick="diaSemana('Lunes')">Lunes</button>
-    <button onclick="diaSemana('Martes')">Martes</button>
-    <button onclick="diaSemana('Miercoles')">Miercoles</button>
-    <button onclick="diaSemana('Jueves')">Jueves</button>
-    <button onclick="diaSemana('Viernes')">Viernes</button>
-    <button onclick="diaSemana('Sabado')">Sabado</button>
-    <button onclick="diaSemana('Domingo')">Domingo</button>
-    <button onclick="diaSemana('Agosto')">Agosto</button>
-    
+    </header>
+    <section class="calc">
+
+        <div class="datos">
+            <input type="number" id="num1" required > <!-- onkeypress='return validaNumericos(event)'/ -->
+            <input type="number" id="num2" required > <!-- onkeypress='return validaNumericos(event)'/ -->
+        </div>
+        <div class="operaciones">
+            <button onclick="operacion('+')">+</button>
+            <button onclick="operacion('-')">-</button>
+            <button onclick="operacion('*')">*</button>
+            <button onclick="operacion('/')">/</button>
+        </div>
+        <div class="resultado">
+            Resultado: <span id="Res"></span>
+        </div>
+    </section>
+
 </body>
 <script src="./assets/js/scripts.js"></script>
+
 </html>
